--- a/src/main/resources/templates/user/loginform.html
+++ b/src/main/resources/templates/user/loginform.html
@@ -20,8 +20,6 @@
 		<ul class="nav">
 			<li class="nav-item"><a class="nav-link" href="/index.html">메인화면</a>
 			</li>
-			<li class="nav-item"><a class="nav-link" href="/login.html">로그인</a>
-			</li>
 			<li class="nav-item"><a class="nav-link" href="/form.html">회원가입</a>
 			</li>
 			<li class="nav-item"><a class="nav-link" href="/list">사용자 목록</a></li>
@@ -30,7 +28,7 @@
 
 		<br> <br>
 
-		<h1>회원가입</h1>
+		<h1>로그인</h1>
 		<br>
 		<form action="/create" method="post">
 			<div class="form-row">
@@ -49,58 +47,6 @@
 			</div>
 			<button type="submit" class="btn btn-primary">회원가입</button>
 		</form>
-
-		<br> <br> <br> <br> <br> <br> <br>
-		<br>
-		<hr>
-
-
-		<footer class="container py-5">
-			<div class="row">
-				<div class="col-12 col-md">
-
-					<small class="d-block mb-3 text-muted">&copy; 2017-2019</small>
-				</div>
-				<div class="col-6 col-md">
-					<h5>Features</h5>
-					<ul class="list-unstyled text-small">
-						<li><a class="text-muted" href="#">Cool stuff</a></li>
-						<li><a class="text-muted" href="#">Random feature</a></li>
-						<li><a class="text-muted" href="#">Team feature</a></li>
-						<li><a class="text-muted" href="#">Stuff for developers</a></li>
-						<li><a class="text-muted" href="#">Another one</a></li>
-						<li><a class="text-muted" href="#">Last time</a></li>
-					</ul>
-				</div>
-				<div class="col-6 col-md">
-					<h5>Resources</h5>
-					<ul class="list-unstyled text-small">
-						<li><a class="text-muted" href="#">Resource</a></li>
-						<li><a class="text-muted" href="#">Resource name</a></li>
-						<li><a class="text-muted" href="#">Another resource</a></li>
-						<li><a class="text-muted" href="#">Final resource</a></li>
-					</ul>
-				</div>
-				<div class="col-6 col-md">
-					<h5>Resources</h5>
-					<ul class="list-unstyled text-small">
-						<li><a class="text-muted" href="#">Business</a></li>
-						<li><a class="text-muted" href="#">Education</a></li>
-						<li><a class="text-muted" href="#">Government</a></li>
-						<li><a class="text-muted" href="#">Gaming</a></li>
-					</ul>
-				</div>
-				<div class="col-6 col-md">
-					<h5>About</h5>
-					<ul class="list-unstyled text-small">
-						<li><a class="text-muted" href="#">Team</a></li>
-						<li><a class="text-muted" href="#">Locations</a></li>
-						<li><a class="text-muted" href="#">Privacy</a></li>
-						<li><a class="text-muted" href="#">Terms</a></li>
-					</ul>
-				</div>
-			</div>
-		</footer>
 
 	</div>
 
